# p4-mcp

./: Cargo.toml  README.md  claude-config-example.json  test_initialize.json
.zed/: tasks.json
src/: lib.rs  main.rs
src/mcp/: mod.rs  types.rs
src/p4/: commands.rs  mod.rs
test_data/: README.md  test_initialize.json  test_initialized.json  test_list_tools.json  test_p4_add.json  test_p4_changes.json  test_p4_edit.json  test_p4_info.json  test_p4_opened.json  test_p4_status.json  test_p4_sync_example.json
tests/: integration_tests.rs  performance_tests.rs  unit_tests.rs
